--- a/vignettes/RepeatRegions.Rmd
+++ b/vignettes/RepeatRegions.Rmd
@@ -176,6 +176,15 @@ alignedRepsOsa <- data.frame(
   align_Aom = isPresent(reps$Osa, gbs$Osa_Aom)
 )
 UpSetR::upset(alignedRepsOsa)
+
+alignedRepsBar <- data.frame(
+  align_Oki = isPresent(reps$Bar, gbs$Bar_Oki),
+  align_Osa = isPresent(reps$Bar, gbs$Bar_Osa),
+  align_Nor = isPresent(reps$Bar, gbs$Bar_Nor),
+  align_Kum = isPresent(reps$Bar, gbs$Bar_Kum),
+  align_Aom = isPresent(reps$Bar, gbs$Bar_Aom)
+)
+UpSetR::upset(alignedRepsBar)
 ```
 
 ## Unaligned
@@ -202,6 +211,15 @@ unalignedRepsOsa <- data.frame(
   unal_Aom = isPresent(reps$Osa, unal$Osa_Aom)
 )
 UpSetR::upset(unalignedRepsOsa)
+
+alignedRepsBar <- data.frame(
+  unal_Oki = isPresent(reps$Bar, unal$Bar_Oki),
+  unal_Osa = isPresent(reps$Bar, unal$Bar_Osa),
+  unal_Nor = isPresent(reps$Bar, unal$Bar_Nor),
+  unal_Kum = isPresent(reps$Bar, unal$Bar_Kum),
+  unal_Aom = isPresent(reps$Bar, unal$Bar_Aom)
+)
+UpSetR::upset(alignedRepsBar)
 ```
 
 ## Mapped
@@ -224,6 +242,15 @@ mappedRepsOsa <- data.frame(
   mapped_Aom = isPresent(reps$Osa, coa$Osa_Aom)
 )
 UpSetR::upset(mappedRepsOsa)
+
+mappedRepsBar <- data.frame(
+  mapped_Oki = isPresent(reps$Bar, coa$Bar_Oki),
+  mapped_Osa = isPresent(reps$Bar, coa$Bar_Osa),
+  mapped_Nor = isPresent(reps$Bar, coa$Bar_Nor),
+  mapped_Kum = isPresent(reps$Bar, coa$Bar_Kum),
+  mapped_Aom = isPresent(reps$Bar, coa$Bar_Aom)
+)
+UpSetR::upset(mappedRepsBar)
 ```
 
 ## Unmapped
@@ -246,6 +273,15 @@ unmappedRepsOsa <- data.frame(
   unmapped_Aom = isPresent(reps$Osa, unmap$Osa_Aom)
 )
 UpSetR::upset(unmappedRepsOsa)
+
+unmappedRepsBar <- data.frame(
+  unmapped_Oki = isPresent(reps$Bar, unmap$Bar_Oki),
+  unmapped_Osa = isPresent(reps$Bar, unmap$Bar_Osa),
+  unmapped_Nor = isPresent(reps$Bar, unmap$Bar_Nor),
+  unmapped_Kum = isPresent(reps$Bar, unmap$Bar_Kum),
+  unmapped_Aom = isPresent(reps$Bar, unmap$Bar_Aom)
+)
+UpSetR::upset(unmappedRepsBar)
 ```
 
 ## Unaligned but mapped by flanking colinear blocks
@@ -268,6 +304,15 @@ unalMapRepsOsa <- data.frame(
   unalMap_Aom = isPresent(reps$Osa, unalMap$Osa_Aom)
 )
 UpSetR::upset(unalMapRepsOsa)
+
+unalMapRepsBar <- data.frame(
+  unalMap_Oki = isPresent(reps$Bar, unalMap$Bar_Oki),
+  unalMap_Osa = isPresent(reps$Bar, unalMap$Bar_Osa),
+  unalMap_Nor = isPresent(reps$Bar, unalMap$Bar_Nor),
+  unalMap_Kum = isPresent(reps$Bar, unalMap$Bar_Kum),
+  unalMap_Aom = isPresent(reps$Bar, unalMap$Bar_Aom)
+)
+UpSetR::upset(unmappedRepsBar)
 ```
 
 # Reduced repeat set
