Note on overlapping repeat annotations.

--- a/vignettes/RepeatRegions.Rmd
+++ b/vignettes/RepeatRegions.Rmd
@@ -349,6 +349,8 @@ UpSetR::upset(traRepsBar)
 
 # Reduced repeat set
 
+Old plots; they show that the above is also true if we merge overlapping repeats.
+
 ```{r}
 reps.reduced <- sapply(reps, reduce, ignore.strand = TRUE) |> SimpleList()
 # They are short.
