Compute also for double-coalesced regions

--- a/vignettes/RepeatRegions.Rmd
+++ b/vignettes/RepeatRegions.Rmd
@@ -61,8 +61,10 @@ mkRepsIn <- function(pairs, reps) {
   reps_in$unal    <- sapply(unal   [pairs], tableIntersectWithReps)
   reps_in$gbs     <- sapply(gbs    [pairs], tableIntersectWithReps)
   reps_in$unmap   <- sapply(unmap  [pairs], tableIntersectWithReps)
+  reps_in$unmap2  <- sapply(unmap2 [pairs], tableIntersectWithReps)
   reps_in$unalMap <- sapply(unalMap[pairs], tableIntersectWithReps)
   reps_in$map     <- sapply(coa    [pairs], tableIntersectWithReps)
+  reps_in$map2    <- sapply(coa2   [pairs], tableIntersectWithReps)
   reps_in$tra     <- sapply(tra    [pairs], tableIntersectWithReps)
   reps_in
 }
