--- a/vignettes/RepeatRegions.Rmd
+++ b/vignettes/RepeatRegions.Rmd
@@ -349,6 +349,23 @@ UpSetR::upset(traRepsBar)
 ```
 
 
+# Repeat annotation of the GBreaks objects
+
+See `vignette("LoadGenomicBreaks", package = "OikSyntenies")` for how the
+different GBreaks objects are annotated.
+
+```{r gbreaks_annot}
+countGbsMatchingReps <- function(gb)  sum(sapply(gb$rep, \(x) ! any(isNA(x))))
+ fracGbsMatchingReps <- function(gbl) sapply(gbl, countGbsMatchingReps) / sapply(gbl, length)
+
+ sapply(list(aligned    = gbs,     unAligned = unal,
+             mapped     = coa,     unMapped  = unmap,
+             unAlMapped = unalMap,
+             transposed = tra,
+             mapped2    = coa2,    unMapped2 = unmap2),
+        fracGbsMatchingReps)
+```
+
 # Reduced repeat set
 
 Old plots; they show that the above is also true if we merge overlapping repeats.
