Plot width of translocated regions.

--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -263,6 +263,10 @@ ggPlotW2W(unalMap.w2s) +
   facet_wrap(~query.rep + target.rep) +
   ggtitle("Width of the target and query mapped unaligned regions, matching or not matching repeats")
 
+ggPlotW2W(tra.w2s) +
+  facet_wrap(~query.rep + target.rep) +
+  ggtitle("Width of the target and query translocated regions, matching or not matching repeats")
+
 ggplot(unalMap.w2s) +
   aes(target / query, col = paste(target.rep, query.rep) ) +
   scale_x_log10() +
